--- a/loansum-product/pom.xml
+++ b/loansum-product/pom.xml
@@ -1,29 +1,29 @@
-<project 
-    xmlns="http://maven.apache.org/POM/4.0.0" xmlns:xsi="http://www.w3.org/2001/XMLSchema-instance"
-    xsi:schemaLocation="http://maven.apache.org/POM/4.0.0 http://maven.apache.org/xsd/maven-4.0.0.xsd">
-    <modelVersion>4.0.0</modelVersion>
-    
-    <parent>
-      <groupId>com.syndloanhub.loansum</groupId>
-      <artifactId>loansum-parent</artifactId>
-      <version>1.0.0-SNAPSHOT</version> 
-    </parent>
+<project xmlns="http://maven.apache.org/POM/4.0.0"
+  xmlns:xsi="http://www.w3.org/2001/XMLSchema-instance"
+  xsi:schemaLocation="http://maven.apache.org/POM/4.0.0 http://maven.apache.org/xsd/maven-4.0.0.xsd">
+  <modelVersion>4.0.0</modelVersion>
 
-    <artifactId>loansum-product</artifactId>
-    <name>LoanSUM-Product</name>
-    <description>LoanSUM product</description>
+  <parent>
+    <groupId>com.syndloanhub.loansum</groupId>
+    <artifactId>loansum-parent</artifactId>
+    <version>1.0.0-SNAPSHOT</version>
+  </parent>
 
-    <dependencies>
-      <dependency>
-        <groupId>com.opengamma.strata</groupId>
-	<artifactId>strata-product</artifactId>
-        <version>2.0.0</version>
-      </dependency>
-     <dependency>
-       <groupId>com.opengamma.strata</groupId>
-       <artifactId>strata-market</artifactId>
-       <version>2.0.0</version>
-     </dependency>
+  <artifactId>loansum-product</artifactId>
+  <name>LoanSUM-Product</name>
+  <description>LoanSUM product</description>
+
+  <dependencies>
+    <dependency>
+      <groupId>com.opengamma.strata</groupId>
+      <artifactId>strata-product</artifactId>
+      <version>2.0.0</version>
+    </dependency>
+    <dependency>
+      <groupId>com.opengamma.strata</groupId>
+      <artifactId>strata-market</artifactId>
+      <version>2.0.0</version>
+    </dependency>
   </dependencies>
 
 </project>
