--- a/pom.xml
+++ b/pom.xml
@@ -1,108 +1,180 @@
 <?xml version="1.0" encoding="UTF-8"?>
-<project xmlns="http://maven.apache.org/POM/4.0.0" xmlns:xsi="http://www.w3.org/2001/XMLSchema-instance"
- xsi:schemaLocation="http://maven.apache.org/POM/4.0.0 http://maven.apache.org/xsd/maven-4.0.0.xsd">
- <modelVersion>4.0.0</modelVersion>
+<project xmlns="http://maven.apache.org/POM/4.0.0"
+  xmlns:xsi="http://www.w3.org/2001/XMLSchema-instance"
+  xsi:schemaLocation="http://maven.apache.org/POM/4.0.0 http://maven.apache.org/xsd/maven-4.0.0.xsd">
+  <modelVersion>4.0.0</modelVersion>
 
- <groupId>com.syndloanhub.loansum</groupId>
- <artifactId>loansum-parent</artifactId>
- <version>1.0.0-SNAPSHOT</version>
- <packaging>pom</packaging>
- <name>LoanSUM-Parent</name>
+  <groupId>com.syndloanhub.loansum</groupId>
+  <artifactId>loansum-parent</artifactId>
+  <version>1.0.0-SNAPSHOT</version>
+  <packaging>pom</packaging>
+  <name>LoanSUM-Parent</name>
 
- <licenses>
-  <license>
-   <name>The Apache Software License, Version 2.0</name>
-   <url>http://www.apache.org/licenses/LICENSE-2.0.txt</url>
-   <distribution>repo</distribution>
-  </license>
- </licenses>
+  <licenses>
+    <license>
+      <name>The Apache Software License, Version 2.0</name>
+      <url>http://www.apache.org/licenses/LICENSE-2.0.txt</url>
+      <distribution>repo</distribution>
+    </license>
+  </licenses>
 
- <issueManagement>
-  <system>GitHub</system>
-  <url>https://github.com/syndloanhub/loansum/issues</url>
- </issueManagement>
+  <developers>
+    <developer>
+      <name>John Sissler</name>
+      <email>jsissler@syndloanhub.com</email>
+      <organization>SyndLoanHub, LLC</organization>
+      <organizationUrl>http://syndloanhub.com</organizationUrl>
+    </developer>
+  </developers>
 
- <inceptionYear>2018</inceptionYear>
+  <issueManagement>
+    <system>GitHub</system>
+    <url>https://github.com/syndloanhub/loansum/issues</url>
+  </issueManagement>
 
- <scm>
-  <connection>scm:git:https://github.com/syndloanhub/loansum.git</connection>
-  <developerConnection>scm:git:https://github.com/syndloanhub/loansum.git</developerConnection>
-  <url>https://github.com/syndloanhub/loansum</url>
- </scm>
+  <inceptionYear>2018</inceptionYear>
 
- <modules>
-  <module>loansum-product</module>
-  <module>loansum-pricer</module>
-  <module>loansum-service</module>
- </modules>
+  <scm>
+    <connection>scm:git:https://github.com/syndloanhub/loansum.git</connection>
+    <developerConnection>scm:git:https://github.com/syndloanhub/loansum.git</developerConnection>
+    <url>https://github.com/syndloanhub/loansum</url>
+  </scm>
 
- <build>
-  <pluginManagement>
-   <plugins>
-    <plugin>
-     <groupId>org.joda</groupId>
-     <artifactId>joda-beans-maven-plugin</artifactId>
-     <version>1.1</version>
-    </plugin>
-   </plugins>
-  </pluginManagement>
- </build>
+  <distributionManagement>
+    <snapshotRepository>
+      <id>ossrh</id>
+      <url>https://oss.sonatype.org/content/repositories/snapshots</url>
+    </snapshotRepository>
+    <repository>
+      <id>ossrh</id>
+      <url>https://oss.sonatype.org/service/local/staging/deploy/maven2/</url>
+    </repository>
+  </distributionManagement>
 
- <profiles>
-  <profile>
-   <id>joda-beans-eclipse</id>
-   <activation>
-    <property>
-     <name>eclipse.buildId</name>
-    </property>
-   </activation>
-   <build>
-    <plugins>
-     <plugin>
-      <groupId>org.joda</groupId>
-      <artifactId>joda-beans-maven-plugin</artifactId>
-      <executions>
-       <execution>
-        <phase>generate-sources</phase>
-        <goals>
-         <goal>generate</goal>
-        </goals>
-        <configuration>
-         <eclipse>true</eclipse>
-        </configuration>
-       </execution>
-      </executions>
-     </plugin>
-    </plugins>
-   </build>
-  </profile>
- </profiles>
+  <modules>
+    <module>loansum-product</module>
+    <module>loansum-pricer</module>
+    <module>loansum-service</module>
+  </modules>
 
- <properties>
-  <joda.beans.indent>2</joda.beans.indent>
-  <joda.beans.prefix>_</joda.beans.prefix>
-  <maven.compiler.source>1.8</maven.compiler.source>
-  <maven.compiler.target>1.8</maven.compiler.target>
-  <org.apache.logging.log4j.simplelog.StatusLogger.level>TRACE</org.apache.logging.log4j.simplelog.StatusLogger.level>
- </properties>
+  <build>
+    <pluginManagement>
+      <plugins>
+        <plugin>
+          <groupId>org.joda</groupId>
+          <artifactId>joda-beans-maven-plugin</artifactId>
+          <version>1.1</version>
+        </plugin>
+        <plugin>
+          <groupId>org.apache.maven.plugins</groupId>
+          <artifactId>maven-source-plugin</artifactId>
+          <version>2.2.1</version>
+          <executions>
+            <execution>
+              <id>attach-sources</id>
+              <goals>
+                <goal>jar-no-fork</goal>
+              </goals>
+            </execution>
+          </executions>
+        </plugin>
+        <plugin>
+          <groupId>org.apache.maven.plugins</groupId>
+          <artifactId>maven-javadoc-plugin</artifactId>
+          <version>2.9.1</version>
+          <executions>
+            <execution>
+              <id>attach-javadocs</id>
+              <goals>
+                <goal>jar</goal>
+              </goals>
+            </execution>
+          </executions>
+        </plugin>
+        <plugin>
+          <groupId>org.apache.maven.plugins</groupId>
+          <artifactId>maven-gpg-plugin</artifactId>
+          <version>1.5</version>
+          <executions>
+            <execution>
+              <id>sign-artifacts</id>
+              <phase>verify</phase>
+              <goals>
+                <goal>sign</goal>
+              </goals>
+            </execution>
+          </executions>
+        </plugin>
+        <plugin>
+          <groupId>org.sonatype.plugins</groupId>
+          <artifactId>nexus-staging-maven-plugin</artifactId>
+          <version>1.6.7</version>
+          <extensions>true</extensions>
+          <configuration>
+            <serverId>ossrh</serverId>
+            <nexusUrl>https://oss.sonatype.org/</nexusUrl>
+            <autoReleaseAfterClose>true</autoReleaseAfterClose>
+          </configuration>
+        </plugin>
+      </plugins>
+    </pluginManagement>
+  </build>
 
- <dependencies>
-  <dependency>
-   <groupId>org.testng</groupId>
-   <artifactId>testng</artifactId>
-   <version>6.10</version>
-   <scope>test</scope>
-  </dependency>
-  <dependency>
-   <groupId>org.assertj</groupId>
-   <artifactId>assertj-core</artifactId>
-   <version>3.6.2</version>
-   <scope>test</scope>
-  </dependency>
-  <dependency>
-   <groupId>ch.qos.logback</groupId>
-   <artifactId>logback-classic</artifactId>
-   <version>1.2.3</version>
-  </dependency>
- </dependencies>
+  <profiles>
+    <profile>
+      <id>joda-beans-eclipse</id>
+      <activation>
+        <property>
+          <name>eclipse.buildId</name>
+        </property>
+      </activation>
+      <build>
+        <plugins>
+          <plugin>
+            <groupId>org.joda</groupId>
+            <artifactId>joda-beans-maven-plugin</artifactId>
+            <executions>
+              <execution>
+                <phase>generate-sources</phase>
+                <goals>
+                  <goal>generate</goal>
+                </goals>
+                <configuration>
+                  <eclipse>true</eclipse>
+                </configuration>
+              </execution>
+            </executions>
+          </plugin>
+        </plugins>
+      </build>
+    </profile>
+  </profiles>
+
+  <properties>
+    <joda.beans.indent>2</joda.beans.indent>
+    <joda.beans.prefix>_</joda.beans.prefix>
+    <maven.compiler.source>1.8</maven.compiler.source>
+    <maven.compiler.target>1.8</maven.compiler.target>
+    <org.apache.logging.log4j.simplelog.StatusLogger.level>TRACE</org.apache.logging.log4j.simplelog.StatusLogger.level>
+  </properties>
+
+  <dependencies>
+    <dependency>
+      <groupId>org.testng</groupId>
+      <artifactId>testng</artifactId>
+      <version>6.10</version>
+      <scope>test</scope>
+    </dependency>
+    <dependency>
+      <groupId>org.assertj</groupId>
+      <artifactId>assertj-core</artifactId>
+      <version>3.6.2</version>
+      <scope>test</scope>
+    </dependency>
+    <dependency>
+      <groupId>ch.qos.logback</groupId>
+      <artifactId>logback-classic</artifactId>
+      <version>1.2.3</version>
+    </dependency>
+  </dependencies>
 </project>
