--- a/loansum-service/pom.xml
+++ b/loansum-service/pom.xml
@@ -37,7 +37,7 @@
   <dependency>
    <groupId>com.syndloanhub.loansum</groupId>
    <artifactId>loansum-pricer</artifactId>
-   <version>1.0.0-SNAPSHOT</version>
+   <version>0.1.0</version>
   </dependency>
  </dependencies>
 
