roll to 0.2.0-SNAPSHOT

--- a/pom.xml
+++ b/pom.xml
@@ -6,7 +6,7 @@
 
   <groupId>com.syndloanhub.loansum</groupId>
   <artifactId>loansum-parent</artifactId>
-  <version>0.1.0-beta</version>
+  <version>0.2.0-SNAPSHOT</version>
   <packaging>pom</packaging>
   <name>LoanSUM-Parent</name>
 
