--- a/loansum-pricer/pom.xml
+++ b/loansum-pricer/pom.xml
@@ -6,7 +6,7 @@
   <parent>
     <groupId>com.syndloanhub.loansum</groupId>
     <artifactId>loansum-parent</artifactId>
-    <version>0.1.0-beta</version>
+    <version>0.2.0-SNAPSHOT</version>
   </parent>
 
   <artifactId>loansum-pricer</artifactId>
@@ -21,7 +21,7 @@
     <dependency>
       <groupId>com.syndloanhub.loansum</groupId>
       <artifactId>loansum-product</artifactId>
-      <version>0.1.0-beta</version>
+      <version>0.2.0-SNAPSHOT</version>
     </dependency>
   </dependencies>
 
