--- a/loansum-service/pom.xml
+++ b/loansum-service/pom.xml
@@ -7,7 +7,7 @@
  <parent>
   <groupId>com.syndloanhub.loansum</groupId>
   <artifactId>loansum-parent</artifactId>
-  <version>0.1.0-beta</version>
+  <version>0.2.0-SNAPSHOT</version>
  </parent>
 
  <artifactId>loansum-service</artifactId>
@@ -37,7 +37,7 @@
   <dependency>
    <groupId>com.syndloanhub.loansum</groupId>
    <artifactId>loansum-pricer</artifactId>
-   <version>0.1.0-beta</version>
+   <version>0.2.0-SNAPSHOT</version>
   </dependency>
  </dependencies>
 
