--- a/loansum-product/pom.xml
+++ b/loansum-product/pom.xml
@@ -6,7 +6,7 @@
   <parent>
     <groupId>com.syndloanhub.loansum</groupId>
     <artifactId>loansum-parent</artifactId>
-    <version>0.2.0-SNAPSHOT</version>
+    <version>0.1.1-beta</version>
   </parent>
 
   <artifactId>loansum-product</artifactId>
