--- a/pom.xml
+++ b/pom.xml
@@ -6,7 +6,7 @@
 
   <groupId>com.syndloanhub.loansum</groupId>
   <artifactId>loansum-parent</artifactId>
-  <version>0.2.0-SNAPSHOT</version>
+  <version>0.1.1-beta</version>
   <packaging>pom</packaging>
   <name>LoanSUM-Parent</name>
 
@@ -75,6 +75,14 @@
               <goal>jar-no-fork</goal>
             </goals>
           </execution>
+          <execution>
+            <id>aggregate-source</id>
+            <inherited>false</inherited>
+            <phase>package</phase>
+            <goals>
+              <goal>aggregate</goal>
+            </goals>
+          </execution>
         </executions>
       </plugin>
       <plugin>
@@ -89,6 +97,14 @@
             <id>attach-javadocs</id>
             <goals>
               <goal>jar</goal>
+            </goals>
+          </execution>
+          <execution>
+            <id>aggregate-javadocs</id>
+            <inherited>false</inherited>
+            <phase>package</phase>
+            <goals>
+              <goal>aggregate-jar</goal>
             </goals>
           </execution>
         </executions>
@@ -178,4 +194,6 @@
       <version>1.2.3</version>
     </dependency>
   </dependencies>
+  <url>http://loansum.org</url>
+  <description>Open source syndicated loan software</description>
 </project>
