--- a/loansum-pricer/.project
+++ b/loansum-pricer/.project
@@ -2,9 +2,7 @@
 <projectDescription>
   <name>loansum-pricer</name>
   <comment>LoanSUM pricer. NO_M2ECLIPSE_SUPPORT: Project files created with the maven-eclipse-plugin are not supported in M2Eclipse.</comment>
-  <projects>
-    <project>loansum-product</project>
-  </projects>
+  <projects/>
   <buildSpec>
     <buildCommand>
       <name>org.eclipse.wst.common.project.facet.core.builder</name>
