--- a/loansum-service/.classpath
+++ b/loansum-service/.classpath
@@ -1,61 +1,44 @@
 <?xml version="1.0" encoding="UTF-8"?>
 <classpath>
-	<classpathentry kind="src" output="target/classes" path="src/main/java">
-		<attributes>
-			<attribute name="optional" value="true"/>
-			<attribute name="maven.pomderived" value="true"/>
-		</attributes>
-	</classpathentry>
-	<classpathentry kind="var" path="M2_REPO/javax/activation/activation/1.1.1/activation-1.1.1.jar"/>
-	<classpathentry kind="var" path="M2_REPO/javax/json/javax.json-api/1.0/javax.json-api-1.0.jar"/>
-	<classpathentry kind="con" path="org.eclipse.jdt.launching.JRE_CONTAINER/org.eclipse.jdt.internal.debug.ui.launcher.StandardVMType/JavaSE-1.8">
-		<attributes>
-			<attribute name="maven.pomderived" value="true"/>
-		</attributes>
-	</classpathentry>
-	<classpathentry kind="var" path="M2_REPO/org/jboss/resteasy/resteasy-jaxrs/3.0.19.Final/resteasy-jaxrs-3.0.19.Final.jar"/>
-	<classpathentry kind="var" path="M2_REPO/org/jboss/spec/javax/ws/rs/jboss-jaxrs-api_2.0_spec/1.0.0.Final/jboss-jaxrs-api_2.0_spec-1.0.0.Final.jar"/>
-	<classpathentry kind="var" path="M2_REPO/org/jboss/spec/javax/annotation/jboss-annotations-api_1.2_spec/1.0.0.Final/jboss-annotations-api_1.2_spec-1.0.0.Final.jar"/>
-	<classpathentry kind="var" path="M2_REPO/org/apache/httpcomponents/httpclient/4.3.6/httpclient-4.3.6.jar"/>
-	<classpathentry kind="var" path="M2_REPO/org/apache/httpcomponents/httpcore/4.3.3/httpcore-4.3.3.jar"/>
-	<classpathentry kind="var" path="M2_REPO/commons-logging/commons-logging/1.1.3/commons-logging-1.1.3.jar"/>
-	<classpathentry kind="var" path="M2_REPO/commons-codec/commons-codec/1.6/commons-codec-1.6.jar"/>
-	<classpathentry kind="var" path="M2_REPO/commons-io/commons-io/2.1/commons-io-2.1.jar"/>
-	<classpathentry kind="var" path="M2_REPO/net/jcip/jcip-annotations/1.0/jcip-annotations-1.0.jar"/>
-	<classpathentry kind="var" path="M2_REPO/org/jboss/logging/jboss-logging/3.1.4.GA/jboss-logging-3.1.4.GA.jar"/>
-	<classpathentry kind="var" path="M2_REPO/org/jboss/resteasy/resteasy-servlet-initializer/3.0.19.Final/resteasy-servlet-initializer-3.0.19.Final.jar"/>
-	<classpathentry kind="var" path="M2_REPO/org/jboss/resteasy/async-http-servlet-3.0/3.0.19.Final/async-http-servlet-3.0-3.0.19.Final.jar"/>
-	<classpathentry kind="src" path="/loansum-pricer"/>
-	<classpathentry kind="var" path="M2_REPO/com/opengamma/strata/strata-pricer/2.0.0/strata-pricer-2.0.0.jar"/>
-	<classpathentry kind="var" path="M2_REPO/com/opengamma/strata/strata-collect/2.0.0/strata-collect-2.0.0.jar"/>
-	<classpathentry kind="var" path="M2_REPO/com/google/guava/guava/26.0-jre/guava-26.0-jre.jar"/>
-	<classpathentry kind="var" path="M2_REPO/org/joda/joda-beans/2.3/joda-beans-2.3.jar"/>
-	<classpathentry kind="var" path="M2_REPO/org/joda/joda-convert/2.1.1/joda-convert-2.1.1.jar"/>
-	<classpathentry kind="var" path="M2_REPO/com/opengamma/strata/strata-basics/2.0.0/strata-basics-2.0.0.jar"/>
-	<classpathentry kind="var" path="M2_REPO/com/opengamma/strata/strata-data/2.0.0/strata-data-2.0.0.jar"/>
-	<classpathentry kind="var" path="M2_REPO/com/opengamma/strata/strata-product/2.0.0/strata-product-2.0.0.jar"/>
-	<classpathentry kind="var" path="M2_REPO/com/opengamma/strata/strata-market/2.0.0/strata-market-2.0.0.jar"/>
-	<classpathentry kind="var" path="M2_REPO/com/opengamma/strata/strata-math/2.0.0/strata-math-2.0.0.jar"/>
-	<classpathentry kind="var" path="M2_REPO/org/apache/commons/commons-math3/3.6.1/commons-math3-3.6.1.jar"/>
-	<classpathentry kind="var" path="M2_REPO/org/slf4j/slf4j-api/1.7.25/slf4j-api-1.7.25.jar" sourcepath="M2_REPO/org/slf4j/slf4j-api/1.7.25/slf4j-api-1.7.25-sources.jar"/>
-	<classpathentry kind="src" path="/loansum-product"/>
-	<classpathentry kind="var" path="M2_REPO/com/syndloanhub/loansum/loansum-fpml/0.0.1-SNAPSHOT/loansum-fpml-0.0.1-SNAPSHOT.jar"/>
-	<classpathentry kind="var" path="M2_REPO/ch/qos/logback/logback-classic/1.2.3/logback-classic-1.2.3.jar" sourcepath="M2_REPO/ch/qos/logback/logback-classic/1.2.3/logback-classic-1.2.3-sources.jar"/>
-	<classpathentry kind="var" path="M2_REPO/ch/qos/logback/logback-core/1.2.3/logback-core-1.2.3.jar" sourcepath="M2_REPO/ch/qos/logback/logback-core/1.2.3/logback-core-1.2.3-sources.jar"/>
-	<classpathentry kind="var" path="M2_REPO/org/testng/testng/6.10/testng-6.10.jar" sourcepath="M2_REPO/org/testng/testng/6.10/testng-6.10-sources.jar"/>
-	<classpathentry kind="var" path="M2_REPO/com/beust/jcommander/1.48/jcommander-1.48.jar" sourcepath="M2_REPO/com/beust/jcommander/1.48/jcommander-1.48-sources.jar"/>
-	<classpathentry kind="var" path="M2_REPO/org/assertj/assertj-core/3.6.2/assertj-core-3.6.2.jar" sourcepath="M2_REPO/org/assertj/assertj-core/3.6.2/assertj-core-3.6.2-sources.jar"/>
-	<classpathentry kind="src" output="target/test-classes" path="src/test/java">
-		<attributes>
-			<attribute name="optional" value="true"/>
-			<attribute name="maven.pomderived" value="true"/>
-			<attribute name="test" value="true"/>
-		</attributes>
-	</classpathentry>
-	<classpathentry kind="con" path="org.eclipse.m2e.MAVEN2_CLASSPATH_CONTAINER">
-		<attributes>
-			<attribute name="maven.pomderived" value="true"/>
-		</attributes>
-	</classpathentry>
-	<classpathentry kind="output" path="target/classes"/>
+  <classpathentry kind="src" path="src/main/java" including="**/*.java"/>
+  <classpathentry kind="output" path="target/classes"/>
+  <classpathentry kind="var" path="M2_REPO/javax/activation/activation/1.1.1/activation-1.1.1.jar" sourcepath="M2_REPO/javax/activation/activation/1.1.1/activation-1.1.1-sources.jar"/>
+  <classpathentry kind="var" path="M2_REPO/javax/json/javax.json-api/1.0/javax.json-api-1.0.jar" sourcepath="M2_REPO/javax/json/javax.json-api/1.0/javax.json-api-1.0-sources.jar"/>
+  <classpathentry kind="con" path="org.eclipse.jdt.launching.JRE_CONTAINER"/>
+  <classpathentry kind="var" path="M2_REPO/org/jboss/resteasy/resteasy-jaxrs/3.0.19.Final/resteasy-jaxrs-3.0.19.Final.jar" sourcepath="M2_REPO/org/jboss/resteasy/resteasy-jaxrs/3.0.19.Final/resteasy-jaxrs-3.0.19.Final-sources.jar"/>
+  <classpathentry kind="var" path="M2_REPO/org/jboss/spec/javax/ws/rs/jboss-jaxrs-api_2.0_spec/1.0.0.Final/jboss-jaxrs-api_2.0_spec-1.0.0.Final.jar" sourcepath="M2_REPO/org/jboss/spec/javax/ws/rs/jboss-jaxrs-api_2.0_spec/1.0.0.Final/jboss-jaxrs-api_2.0_spec-1.0.0.Final-sources.jar"/>
+  <classpathentry kind="var" path="M2_REPO/org/jboss/spec/javax/annotation/jboss-annotations-api_1.2_spec/1.0.0.Final/jboss-annotations-api_1.2_spec-1.0.0.Final.jar" sourcepath="M2_REPO/org/jboss/spec/javax/annotation/jboss-annotations-api_1.2_spec/1.0.0.Final/jboss-annotations-api_1.2_spec-1.0.0.Final-sources.jar"/>
+  <classpathentry kind="var" path="M2_REPO/org/apache/httpcomponents/httpclient/4.3.6/httpclient-4.3.6.jar" sourcepath="M2_REPO/org/apache/httpcomponents/httpclient/4.3.6/httpclient-4.3.6-sources.jar"/>
+  <classpathentry kind="var" path="M2_REPO/org/apache/httpcomponents/httpcore/4.3.3/httpcore-4.3.3.jar" sourcepath="M2_REPO/org/apache/httpcomponents/httpcore/4.3.3/httpcore-4.3.3-sources.jar"/>
+  <classpathentry kind="var" path="M2_REPO/commons-logging/commons-logging/1.1.3/commons-logging-1.1.3.jar" sourcepath="M2_REPO/commons-logging/commons-logging/1.1.3/commons-logging-1.1.3-sources.jar"/>
+  <classpathentry kind="var" path="M2_REPO/commons-codec/commons-codec/1.6/commons-codec-1.6.jar" sourcepath="M2_REPO/commons-codec/commons-codec/1.6/commons-codec-1.6-sources.jar"/>
+  <classpathentry kind="var" path="M2_REPO/commons-io/commons-io/2.1/commons-io-2.1.jar" sourcepath="M2_REPO/commons-io/commons-io/2.1/commons-io-2.1-sources.jar"/>
+  <classpathentry kind="var" path="M2_REPO/net/jcip/jcip-annotations/1.0/jcip-annotations-1.0.jar" sourcepath="M2_REPO/net/jcip/jcip-annotations/1.0/jcip-annotations-1.0-sources.jar"/>
+  <classpathentry kind="var" path="M2_REPO/org/jboss/logging/jboss-logging/3.1.4.GA/jboss-logging-3.1.4.GA.jar" sourcepath="M2_REPO/org/jboss/logging/jboss-logging/3.1.4.GA/jboss-logging-3.1.4.GA-sources.jar"/>
+  <classpathentry kind="var" path="M2_REPO/org/jboss/resteasy/resteasy-servlet-initializer/3.0.19.Final/resteasy-servlet-initializer-3.0.19.Final.jar" sourcepath="M2_REPO/org/jboss/resteasy/resteasy-servlet-initializer/3.0.19.Final/resteasy-servlet-initializer-3.0.19.Final-sources.jar"/>
+  <classpathentry kind="var" path="M2_REPO/org/jboss/resteasy/async-http-servlet-3.0/3.0.19.Final/async-http-servlet-3.0-3.0.19.Final.jar" sourcepath="M2_REPO/org/jboss/resteasy/async-http-servlet-3.0/3.0.19.Final/async-http-servlet-3.0-3.0.19.Final-sources.jar"/>
+  <classpathentry kind="src" path="/loansum-pricer"/>
+  <classpathentry kind="src" path="/loansum-product"/>
+  <classpathentry kind="var" path="M2_REPO/ch/qos/logback/logback-classic/1.2.3/logback-classic-1.2.3.jar" sourcepath="M2_REPO/ch/qos/logback/logback-classic/1.2.3/logback-classic-1.2.3-sources.jar"/>
+  <classpathentry kind="var" path="M2_REPO/ch/qos/logback/logback-core/1.2.3/logback-core-1.2.3.jar" sourcepath="M2_REPO/ch/qos/logback/logback-core/1.2.3/logback-core-1.2.3-sources.jar"/>
+  <classpathentry kind="var" path="M2_REPO/org/slf4j/slf4j-api/1.7.25/slf4j-api-1.7.25.jar" sourcepath="M2_REPO/org/slf4j/slf4j-api/1.7.25/slf4j-api-1.7.25-sources.jar"/>
+  <classpathentry kind="var" path="M2_REPO/com/opengamma/strata/strata-measure/2.7.0/strata-measure-2.7.0.jar" sourcepath="M2_REPO/com/opengamma/strata/strata-measure/2.7.0/strata-measure-2.7.0-sources.jar"/>
+  <classpathentry kind="var" path="M2_REPO/com/opengamma/strata/strata-collect/2.7.0/strata-collect-2.7.0.jar" sourcepath="M2_REPO/com/opengamma/strata/strata-collect/2.7.0/strata-collect-2.7.0-sources.jar"/>
+  <classpathentry kind="var" path="M2_REPO/com/google/guava/guava/26.0-jre/guava-26.0-jre.jar" sourcepath="M2_REPO/com/google/guava/guava/26.0-jre/guava-26.0-jre-sources.jar"/>
+  <classpathentry kind="var" path="M2_REPO/org/joda/joda-beans/2.7.1/joda-beans-2.7.1.jar" sourcepath="M2_REPO/org/joda/joda-beans/2.7.1/joda-beans-2.7.1-sources.jar"/>
+  <classpathentry kind="var" path="M2_REPO/org/joda/joda-convert/2.2.1/joda-convert-2.2.1.jar" sourcepath="M2_REPO/org/joda/joda-convert/2.2.1/joda-convert-2.2.1-sources.jar"/>
+  <classpathentry kind="var" path="M2_REPO/com/opengamma/strata/strata-basics/2.7.0/strata-basics-2.7.0.jar" sourcepath="M2_REPO/com/opengamma/strata/strata-basics/2.7.0/strata-basics-2.7.0-sources.jar"/>
+  <classpathentry kind="var" path="M2_REPO/com/opengamma/strata/strata-data/2.7.0/strata-data-2.7.0.jar" sourcepath="M2_REPO/com/opengamma/strata/strata-data/2.7.0/strata-data-2.7.0-sources.jar"/>
+  <classpathentry kind="var" path="M2_REPO/com/opengamma/strata/strata-calc/2.7.0/strata-calc-2.7.0.jar" sourcepath="M2_REPO/com/opengamma/strata/strata-calc/2.7.0/strata-calc-2.7.0-sources.jar"/>
+  <classpathentry kind="var" path="M2_REPO/com/opengamma/strata/strata-product/2.7.0/strata-product-2.7.0.jar" sourcepath="M2_REPO/com/opengamma/strata/strata-product/2.7.0/strata-product-2.7.0-sources.jar"/>
+  <classpathentry kind="var" path="M2_REPO/com/opengamma/strata/strata-market/2.7.0/strata-market-2.7.0.jar" sourcepath="M2_REPO/com/opengamma/strata/strata-market/2.7.0/strata-market-2.7.0-sources.jar"/>
+  <classpathentry kind="var" path="M2_REPO/com/opengamma/strata/strata-math/2.7.0/strata-math-2.7.0.jar" sourcepath="M2_REPO/com/opengamma/strata/strata-math/2.7.0/strata-math-2.7.0-sources.jar"/>
+  <classpathentry kind="var" path="M2_REPO/org/apache/commons/commons-math3/3.6.1/commons-math3-3.6.1.jar" sourcepath="M2_REPO/org/apache/commons/commons-math3/3.6.1/commons-math3-3.6.1-sources.jar"/>
+  <classpathentry kind="var" path="M2_REPO/com/opengamma/strata/strata-pricer/2.7.0/strata-pricer-2.7.0.jar" sourcepath="M2_REPO/com/opengamma/strata/strata-pricer/2.7.0/strata-pricer-2.7.0-sources.jar"/>
+  <classpathentry kind="var" path="M2_REPO/org/junit/jupiter/junit-jupiter-engine/5.6.2/junit-jupiter-engine-5.6.2.jar" sourcepath="M2_REPO/org/junit/jupiter/junit-jupiter-engine/5.6.2/junit-jupiter-engine-5.6.2-sources.jar"/>
+  <classpathentry kind="var" path="M2_REPO/org/apiguardian/apiguardian-api/1.1.0/apiguardian-api-1.1.0.jar" sourcepath="M2_REPO/org/apiguardian/apiguardian-api/1.1.0/apiguardian-api-1.1.0-sources.jar"/>
+  <classpathentry kind="var" path="M2_REPO/org/junit/platform/junit-platform-engine/1.6.2/junit-platform-engine-1.6.2.jar" sourcepath="M2_REPO/org/junit/platform/junit-platform-engine/1.6.2/junit-platform-engine-1.6.2-sources.jar"/>
+  <classpathentry kind="var" path="M2_REPO/org/opentest4j/opentest4j/1.2.0/opentest4j-1.2.0.jar" sourcepath="M2_REPO/org/opentest4j/opentest4j/1.2.0/opentest4j-1.2.0-sources.jar"/>
+  <classpathentry kind="var" path="M2_REPO/org/junit/platform/junit-platform-commons/1.6.2/junit-platform-commons-1.6.2.jar" sourcepath="M2_REPO/org/junit/platform/junit-platform-commons/1.6.2/junit-platform-commons-1.6.2-sources.jar"/>
+  <classpathentry kind="var" path="M2_REPO/org/junit/jupiter/junit-jupiter-api/5.6.2/junit-jupiter-api-5.6.2.jar" sourcepath="M2_REPO/org/junit/jupiter/junit-jupiter-api/5.6.2/junit-jupiter-api-5.6.2-sources.jar"/>
 </classpath>
