--- a/pom.xml
+++ b/pom.xml
@@ -184,14 +184,15 @@
 			<version>5.6.2</version>
 			<scope>test</scope>
 		</dependency>
-		<!-- <dependency> <groupId>org.testng</groupId> <artifactId>testng</artifactId> 
-			<version>6.10</version> <scope>test</scope> </dependency> <dependency> <groupId>org.assertj</groupId> 
-			<artifactId>assertj-core</artifactId> <version>3.6.2</version> <scope>test</scope> 
-			</dependency> -->
 		<dependency>
 			<groupId>ch.qos.logback</groupId>
 			<artifactId>logback-classic</artifactId>
 			<version>1.2.3</version>
+		</dependency>
+		<dependency>
+			<groupId>com.opengamma.strata</groupId>
+			<artifactId>strata-measure</artifactId>
+			<version>2.7.0</version>
 		</dependency>
 	</dependencies>
 	<url>http://loansum.org</url>
