fixed unmarshall issue

--- a/loansum-fpml/pom.xml
+++ b/loansum-fpml/pom.xml
@@ -13,7 +13,7 @@
 	<dependencies>
 		<dependency>
 			<groupId>com.syndloanhub.loansum</groupId>
-			<artifactId>loansum-product</artifactId>
+			<artifactId>loansum-pricer</artifactId>
 			<version>1.0.0-SNAPSHOT</version>
 		</dependency> 
 		<dependency>
